<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".inscription">
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="60dp"
            app:cardElevation="0dp">
            <ImageView
                android:id="@+id/imageview1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="100px"
                android:scaleType="centerCrop"
                android:src="@drawable/img2" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="400dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="50dp"
            android:text="@string/cr_er_un_compte"
            android:textColor="#4169E1"
            android:textSize="30sp"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:background="@drawable/roundbuttonblanc"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-10dp"
                android:background="@drawable/roundbuttonblanc"
                android:hint="@string/nom_de_utilisateur"
                android:id="@+id/username"
                android:drawableEnd="@drawable/ic_user"
                android:layout_marginStart="20dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:background="@drawable/roundbuttonblanc"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-10dp"
                android:drawableEnd="@drawable/ic_user"
                android:background="@drawable/roundbuttonblanc"
                android:hint="@string/prenom_de_utilisateur"
                android:id="@+id/lastname"
                android:layout_marginStart="20dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:inputType = "number"
            android:background="@drawable/roundbuttonblanc">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="280dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/cin"
                android:background="@drawable/roundbuttonblanc"
                android:hint="@string/cin"
                android:drawableEnd="@drawable/ic_cin"
                android:layout_marginStart="10dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:inputType = "textPassword"
            android:background="@drawable/roundbuttonblanc"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="280dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:background="@drawable/roundbuttonblanc"
                android:hint="@string/mot_de_passe"
                android:layout_marginStart="10dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:inputType = "text"
            android:background="@drawable/roundbuttonblanc">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="280dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/mail"
                android:drawableEnd="@drawable/ic_mail2"
                android:background="@drawable/roundbuttonblanc"
                android:hint="@string/adresse_email"
                android:layout_marginStart="10dp" />

            <ImageView
                android:id="@+id/imageview2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="100px"
                android:scaleType="centerCrop"
                android:src="@drawable/img2" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:inputType = "text"
            android:background="@drawable/roundbuttonblanc">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="280dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/adresse"
                android:background="@drawable/roundbuttonblanc"
                android:hint="@string/adresse"
                android:drawableEnd="@drawable/ic_adresse"
                android:layout_marginStart="10dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:inputType = "datetime"
            android:background="@drawable/roundbuttonblanc">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="280dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:drawableEnd="@drawable/ic_date"
                android:background="@drawable/roundbuttonblanc"
                android:hint="@string/date_de_naissance"
                android:layout_marginStart="10dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <RadioGroup
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundbuttonblanc"
            android:text="@string/role"
            android:id="@+id/role">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Role"
                android:textSize="20dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traducteur"
                android:id="@+id/traducteur"
                android:textSize="20sp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client"
                android:id="@+id/client"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"/>
        </RadioGroup>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:inputType = "phone"
            android:background="@drawable/roundbuttonblanc">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="280dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/telephone"
                android:background="@drawable/roundbuttonblanc"
                android:hint="@string/telephone"
                android:drawableEnd="@drawable/ic_phone"
                android:layout_marginStart="10dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="-100dp"
            android:text="@string/crer"
            android:id="@+id/sign_up_button"
            android:backgroundTint="#4169E1"
            android:layout_marginStart="-100dp"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_aleardyhadaccount"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="-55dp"
            android:backgroundTint="#4169E1"
            android:text="@string/vous_avez_deja_un_compte"
            android:layout_marginStart="100dp"
            tools:targetApi="lollipop" />
    </LinearLayout>
</ScrollView>