<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".login"
        tools:visibility="visible">
<androidx.cardview.widget.CardView
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="60dp"
    app:cardElevation="0dp">

    <ImageView
        android:id="@+id/imageview2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100px"
        android:scaleType="centerCrop"
        android:src="@drawable/img_1" />
</androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/se_connecter"
            android:textColor="#4169E1"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp" />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundbuttonblanc"
            android:inputType="textPersonName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mail"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-10dp"
                android:background="@drawable/roundbuttonblanc"
                android:drawableEnd="@android:drawable/ic_dialog_email"
                android:hint="@string/adresse_email"
                android:layout_marginStart="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundbuttonblanc"
            android:inputType="textPassword"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/roundbuttonblanc"
                android:drawableEnd="@drawable/ic_password"
                android:hint="@string/mot_de_passe"
                android:layout_marginStart="10dp" />
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#4169E1"
            android:text="@string/se_connecter"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/creataccount"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/cr_er_un_compte"
            android:textColor="#4169E1"
            android:textSize="20sp"
            android:layout_marginStart="30dp" />
    </LinearLayout></ScrollView>